[package]
name = "rust_keien"
version = "0.1.0"
edition = "2021"

description = "keien for Rust"
documentation = "https://github.com/keienwang/rust_keien"

homepage = "https://github.com/keienwang/rust_keien"
keywords = ["science", "mathematics", "ai", "hpc"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sort_rust = "0.2.0"
